frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: aron918/final-exam-final-exam:e1765899d2b18cbbed44b00974ce7ffd2a09ee6e
        ports:
        - containerPort: 80
